# vm

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  USAGE.md  client.lua  cmake_install.cmake  init.lua  server.lua  signal.lua  vm
core/: client.lua
include/: allocator.h  bridge.h  network.h  platform.h  sandbox.h  scheduler.h
lua_build-prefix/tmp/: lua_build-mkdirs.cmake
luajit-prefix/src/luajit-stamp/: luajit-source_dirinfo.txt
luajit-prefix/tmp/: luajit-mkdirs.cmake
luajit_install/include/luajit-2.1/: lauxlib.h  lua.h  luaconf.h  luajit.h  lualib.h
luajit_install/lib/pkgconfig/: luajit.pc
scripts/: init.lua
src/: allocator.c  bridge.c  main.c  network.c  sandbox.c  scheduler.c
